# hawc-simulator

./: .gitignore  .readthedocs.yaml  README.md  env.yml  local_mapping.json  pixi.toml  pyproject.toml
.github/workflows/: release.yml  test.yml  update-lockfiles.yml
ci/conda-envs/: readthedocs.yml
conda.recipe/: meta.yaml
docs/source/: changelog.md  conf.py  index.md  installation.md  quickstart.md
docs/source/ali/: introduction.md  quickstart.md
docs/source/api/: datacontainers.md  steps.md
docs/source/developer/: contributing.md  local_setup.md
docs/source/show/: introduction.md  quickstart.md
notebooks/ali/examples/: quickstart.ipynb
notebooks/show/examples/: quick_start.ipynb
notebooks/show/tutorial/: 1 - introduction-orbit.ipynb  1 - introduction.ipynb  AOS_Storm_Inclined_v2025-01-29_Epoch2019.tle
src/hawcsimulator/: __init__.py  appconfig.py  simulator.py
src/hawcsimulator/ali/: calibration.py  inst_model.py  inst_model_imager.py  por.py
src/hawcsimulator/ali/configurations/: ideal_dolp_imager.py  ideal_spectrograph.py
src/hawcsimulator/ali/steps/: __init__.py  fer.py  ideal_imager.py  ideal_inst.py  l2.py  por.py
src/hawcsimulator/atmosphere/: aerosol.py
src/hawcsimulator/atmosphere/earthcare/: __init__.py
src/hawcsimulator/atmosphere/ompscalera/: __init__.py
src/hawcsimulator/datastructures/: atmosphere.py  base.py  viewinggeo.py
src/hawcsimulator/fer/: __init__.py
src/hawcsimulator/geometry/: observation.py
src/hawcsimulator/noise/: __init__.py
src/hawcsimulator/show/: calibration.py  inst_model.py  por.py
src/hawcsimulator/show/configurations/: ideal.py
src/hawcsimulator/show/steps/: __init__.py  fer.py  ideal_inst.py  l2.py  por.py
src/hawcsimulator/steps/: __init__.py  atmosphere.py  base.py  default_atmosphere.py  limb_observation.py  orbit_observation.py
tests/show/: test_simple_show_full_chain.py
